<resources>
    <string name="app_name">Open Teilauto</string>
    <string name="prompt_membership_no">Membership No</string>
    <string name="prompt_password">Password</string>
    <string name="button_login">Login</string>
    <string name="begin_label">Begin</string>
    <string name="end_label">End</string>
    <string name="station_label">Station</string>
    <string name="button_lock">Lock</string>
    <string name="button_unlock">Unlock</string>
    <string name="enter_pin_message">Enter your PIN</string>
    <string name="enter_pin_title">Enter PIN</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pin_hint">Unlock PIN</string>
    <string name="network_error">Network Error</string>
    <string name="server_error">Server Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_login_error">Unknown Login Error</string>
    <string name="login_failed">Login failed</string>
    <string name="login_welcome">Hello %1$s %2$s!</string>
    <string name="booking_time">%1$s - %2$s</string>
    <string name="bookings_list_title">Bookings</string>
    <string name="login_title">Login</string>
    <string name="booking_detail_title">Booking</string>
    <string name="search_button_description">Search</string>
    <string name="search_title">Search</string>
    <string name="search_address_hint">Address</string>
    <string name="search_begin_time_hint">Begin Time</string>
    <string name="search_end_time_hint">End Time</string>
    <string name="search_button_text">Search</string>
    <string name="search_location_description">Get Geo Location</string>
    <string name="button_choose_date_time">Choose</string>
    <string name="search_begin_date_hint">Begin Date</string>
    <string name="search_end_date_hint">End Date</string>
    <string name="search_car_category_hint">Car Category</string>
    <string name="date_format_invalid">Date format is invalid</string>
    <string name="time_format_invalid">Time format is invalid</string>
    <string name="begin_date_time_invalid">Begin date time is invalid</string>
    <string name="end_date_time_invalid">End date time is invalid</string>
    <string name="location_required">Location is required for the search functionality</string>
    <string name="location_unknown">No location found yet</string>
    <string name="button_book">Book</string>
    <string name="time_cost_label">Time cost</string>
    <string name="km_cost_label">Distance cost</string>
    <string name="km_edit_label">KM</string>
    <string name="total_cost_label">Total costs</string>
    <string name="enter_valid_number">Enter a valid number</string>
    <string name="chip_mini_text">Minis</string>
    <string name="chip_small_text">Small</string>
    <string name="chip_delivery_van_text">Delivery Vans</string>
    <string name="chip_compact_text">Compacts</string>
    <string name="chip_mini_van_text">Mini Vans</string>
    <string name="chip_medium_sized_text">Medium Sized</string>
    <string name="chip_transporter_text">Transporter</string>
    <string name="chip_bus_text">Busses</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="cancel_booking_button">Cancel Booking</string>
    <string name="cancel_booking_message">Do you want to cancel your booking?</string>
    <string name="cancel_booking_title">Cancel Booking</string>
    <string name="invalid_search_parameters">Invalid search parameters</string>
    <string name="button_edit_location">Edit</string>
    <string name="edit_location_message">Input a location address</string>
    <string name="edit_location_title">Edit location</string>
    <string name="manual_location_warning">Please manually enter a location</string>
    <string name="location_not_found">No location found</string>
    <string name="station_distance">%d m</string>
    <string name="select_begin_date">Select start date</string>
    <string name="select_begin_time">Select start time</string>
    <string name="select_end_date">Select end date</string>
    <string name="select_end_time">Select end time</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="time_format">HH:mm</string>
</resources>